<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/course_list_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:contentDescription="@string/course_img"
            android:scaleType="centerCrop"
            android:src="@drawable/course_img" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="170dp"
            android:layout_weight="1"
            android:gravity="right"
            android:orientation="horizontal">

            <ImageView
                android:id='@+id/update_course_btn'
                android:layout_width="25sp"
                android:layout_height="30sp"
                android:layout_marginRight="10dp"
                android:clickable="true"
                android:contentDescription="update course button"
                android:src="@android:drawable/ic_menu_edit" />

            <ImageView
                android:id="@+id/delete_course_btn"
                android:layout_width="25sp"
                android:layout_height="30sp"
                android:layout_marginRight="10dp"
                android:clickable="true"
                android:contentDescription="delete course button"
                android:src="@android:drawable/ic_menu_delete" />

        </LinearLayout>

        <TextView
            android:id="@+id/course_list_item_name"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="160dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:padding="10dp"
            android:singleLine="true"
            android:text="@string/content_course_id"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </androidx.cardview.widget.CardView>
</RelativeLayout>