...
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="@+id/card"
        app:layout_constraintTop_toTopOf="@+id/card"
        app:layout_constraintVertical_bias="0.175" />

    <EditText
        android:id="@+id/input_answer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="45dp"
        android:layout_weight="1"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cue_card"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_weight="1"
        android:layout_marginStart="50dp"
        android:layout_marginTop="25dp"
...
